# shutr7

./: .gitignore  README.md  pyproject.toml
src/shutr7/: __init__.py  __main__.py  camera.py  cli.py
src/shutr7/ptp/: __init__.py  canon.py  constants.py  protocol.py  transport.py
